# graphql-ws-rs

./: Cargo.toml  README.md
macros/: Cargo.toml
macros/src/: client_trait.rs  lib.rs  subscriber.rs
src/: client.rs  client_actor.rs  client_cfg.rs  connection.rs  execution_result.rs  graphql_error.rs  lib.rs  message.rs  payload.rs  request.rs  response.rs  subscriber.rs
tests/: connection_init.rs  receive_data.rs  receive_error.rs  subscription.rs
tests/fixture/: client.rs  mod.rs  server.rs
