[package]
name = "tokio-graphql-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "^0", features = ["native-tls-vendored"] }
tokio = { version = "^1", features = ["full"] }
futures-util = "^0"
futures = "^0"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
uuid = { version = "^0", features = ["v4"] }
chrono = "^0"
async-trait = "^0"

[dev-dependencies]
async-graphql = { version = "^3", features = ["chrono"] }
async-graphql-warp = "^3"
warp = "^0"